[package]
name = "peertlshake"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"

tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.2"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }

no_verification_derive = { path = "no_verification_derive" }

[dev-dependencies]
rand = "0.8.5"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }

rsa = { version = "0.9.6", features = ["pem"] }
rcgen = { version = "0.13.1", features = ["pem", "x509-parser"] }
